# dropignore

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: mutants.toml
.githooks/: pre-commit
contrib/: dropignore.service
docs/superpowers/plans/: 2026-07-01-overflow-registry-reconciliation.md  2026-07-01-robustness-fixes.md  2026-07-01-watcher-robustness-symlink-overflow.md  2026-07-02-graceful-shutdown-event-loop-testability.md  2026-07-02-housekeeping-bundle.md  2026-07-02-marking-consistency.md  2026-07-02-move-self-subtree-cleanup.md  2026-07-02-rule-eval-logging-cleanup.md  2026-07-02-rule-expansion-jvm-js-iac.md  2026-07-02-rule-expansion-safe-artifacts.md  2026-07-02-scan-once-mode.md  2026-07-02-scoped-trigger-rescan.md  2026-07-02-test-coverage-recovery-paths.md  2026-07-02-vcs-skip-systemd-rules-bundle.md  2026-07-02-watch-failure-isolation-rule-consolidation.md  2026-07-16-default-rules-extraction.md  2026-07-16-mutation-testing-validity-coverage.md
docs/superpowers/specs/: 2026-07-01-overflow-registry-reconciliation-design.md  2026-07-01-robustness-fixes-design.md  2026-07-01-watcher-robustness-symlink-overflow-design.md  2026-07-02-graceful-shutdown-event-loop-testability-design.md  2026-07-02-housekeeping-bundle-design.md  2026-07-02-marking-consistency-design.md  2026-07-02-move-self-subtree-cleanup-design.md  2026-07-02-rule-eval-logging-cleanup-design.md  2026-07-02-rule-expansion-jvm-js-iac-design.md  (+8 more)
scripts/: check.sh  mutants.Containerfile  mutants.sh
src/: app.rs  cli.rs  discovery.rs  dropbox.rs  main.rs  rules.rs  test_util.rs  watch.rs
