[package]
name = "dropignore"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mikoim/dropignore"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
inotify = "0.10"
libc = "0.2"
log = "0.4"

[dev-dependencies]
tempfile = "3.10"
